feat: Last adjustments

--- a/wp-content/themes/liberta/assets/_home.scss
+++ b/wp-content/themes/liberta/assets/_home.scss
@@ -380,23 +380,21 @@
       span {
         font-weight: 700;
       }
-    }
-
-    &.focus-button {
       .focus-button-title {
-        color: $teal;
+        color: $green;
         font-weight: 700;
         font-size: 28px;
         text-align: center;
       }
-      .btn-teal {
-        background-color: $teal;
+      .btn-green {
+        background-color: $green;
         color: #fff;
         font-weight: 900;
         font-size: 16px;
         padding: 15px;
         text-transform: uppercase;
         border-radius: 4px;
+        letter-spacing: 4.5px;
       }
     }
   }
